--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,22 @@ h1 {
     font-family: 'Roboto Mono', monospace;
 }
 
+#greeting {
+    color: rgb(255, 148, 148);
+    font-size: 30px;
+    font-family: 'Oxygen', sans-serif;
+}
+
+#intro-name {
+    color: rgb(255, 119, 106);
+    font-size:35px;
+    font-family: 'Roboto Mono', monospace;
+}
+
 p {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
+    line-height: 1.6;
 }
 
 nav {
@@ -64,7 +77,8 @@ li a:hover, .active {
 }
 
 header {
-    margin: 0 5rem;
+    margin: 0 20vw;
+    margin-top:1rem;
     margin-bottom: 3rem;;
 }
 
