add media query for mobile screens

--- a/css/other-styles.css
+++ b/css/other-styles.css
@@ -13,6 +13,12 @@ main {
     margin: 0 20vw;
 }
 
+@media screen and (max-width: 756px) {
+    main {
+        margin: 0 10vw;
+    }
+}
+
 #resume {
     margin: 0 10vw;
 }
