--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #E9E9E9;
-    padding: 0.5rem 0
+    padding: 0.5rem 0;
+    margin: 0 5vw;
 }
 
 #logo {
@@ -77,7 +78,10 @@ li a:hover, .active {
 }
 
 header {
-    margin: 0 20vw;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20vw;
     margin-top:1rem;
     margin-bottom: 3rem;;
 }
@@ -102,4 +106,10 @@ footer {
 
 footer p {
     font-size: 12px;
+}
+
+@media screen and (max-width: 756px) {
+    header {
+        padding: 0 10vw;
+    }
 }
