--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,14 @@ h1 {
     font-family: 'Roboto Mono', monospace;
 }
 
+h2, h3 {
+    font-family: 'Rubik', monospace;
+}
+
+h2 {
+    margin-bottom:3rem;
+}
+
 #greeting {
     color: rgb(255, 148, 148);
     font-size: 30px;
@@ -26,7 +34,7 @@ h1 {
 }
 
 p {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Oxygen', sans-serif;
     font-weight: 300;
     line-height: 1.6;
 }
@@ -34,6 +42,13 @@ p {
 a, a:focus, a:visited, a:link, a:hover, a:active {
     text-decoration: none;
     color: #331917 !important;
+}
+
+main {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Navigation */
@@ -54,69 +69,6 @@ nav {
     align-items: center !important;
 }
 
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-  
-  /* Hide default HTML checkbox */
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-  
-  /* The slider */
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-  
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-  
-input:checked + .slider {
-    background-color: rgb(255, 148, 148);
-}
-  
-input:focus + .slider {
-    box-shadow: 0 0 1px rgb(255, 148, 148);
-}
-  
-input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}
-  
-  /* Rounded sliders */
-.slider.round {
-    border-radius: 34px;
-}
-  
-.slider.round:before {
-    border-radius: 50%;
-}
-
 #logo {
     padding: 0 16px;
     display:flex;
@@ -130,7 +82,7 @@ input:checked + .slider:before {
 .custom-nav {
     font-family: 'Roboto Mono', monospace;
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: right;
     list-style-type: none;
     margin:0;
@@ -155,23 +107,127 @@ li a:hover, .active {
     color: rgb(255, 149, 149) !important;
 }
 
+/* Header */
+
 header {
     display:flex;
-    flex-direction: column;
+    flex-flow: row wrap;
     justify-content: center;
+    align-items: center;
+    align-content: center;
     padding: 0 20vw;
     margin-top:1rem;
     margin-bottom: 3rem;;
+    min-height: 85vh;
+    gap: 2rem;
 }
+
+.greeting {
+    display:flex;
+    flex-direction: column;
+    flex:1 1 10rem;
+}
+
+.greeting h1 {
+    color: rgb(255, 148, 148);
+    font-size: 30px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.greeting h2 {
+    color: rgb(255, 119, 106);
+    font-size:35px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.my-intro {
+    display:flex;
+    flex-direction: column;
+    flex:2 2 20rem;
+}
+
+
+/* Projects */
+
+.previews {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+}
+
+.preview {
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    width: 70vw;
+}
+
+.project-content {
+    display:flex;
+    flex-flow: row wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+    width:100%;
+    gap: 1rem;
+}
+
+.thumbnail {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 20rem;
+    width:30rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.project-info {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width:40%;
+}
+
+.tags {
+    display:flex;
+    flex-flow: row wrap;
+}
+
+.tag {
+    background-color: #FFC5C5;
+    padding: 4px 8px;
+    color: #331917;
+    margin: 4px;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.atb-img {
+    background-image: url('../images/atb/atb.png');
+}
+
+.ktp-img {
+    background-image: url('../images/ktp/ktp.png');
+}
+
+/* Footer */
 
 footer {
     display:flex;
     flex-direction: column;
     align-items: center;
+    align-content: center;
     margin: 2rem 0;
     padding:1rem;
-    height:8rem;
-    justify-content: space-around;
+    height:50vh;
+    gap: 3rem;
+    justify-content: center;
 }
 
 .socials {
@@ -189,5 +245,12 @@ footer p {
 @media screen and (max-width: 756px) {
     header {
         padding: 0 10vw;
+    }
+    body {
+        font-family: 'Oxygen', sans-serif;
+        margin: 0 1rem;
+    }
+    .project-info {
+        width: 100%
     }
 }
