restructure about page

--- a/css/other-styles.css
+++ b/css/other-styles.css
@@ -13,6 +13,37 @@ header {
     margin:0;
 }
 
+/* Images */
+
+.me {
+    width: 40vh;
+    height: auto;
+}
+
+.my-picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:1rem;
+}
+
+.image-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.image-wrapper::before {
+    content: '';
+    position: absolute;
+    left: -10px;
+    bottom: -10px;
+    width: calc(100% + 20px);
+    height: calc(100% + 20px);
+    border: 2px solid pink;
+    z-index: -1;
+}
+
+
 /* Resume */
 
 iframe {
