--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,19 @@
 /* Text */
 
 * {
-    color: #331917;
     transition: all 300ms;
 }
 
 body {
     font-family: 'Oxygen', sans-serif;
     margin: 0 3rem;
+    background-color: white;
+    color: #331917
+}
+
+.dark-mode {
+    background-color: #331917 !important;
+    color: white !important;
 }
 
 h1 {
@@ -38,7 +44,7 @@ p {
 
 a, a:focus, a:visited, a:link, a:hover, a:active {
     text-decoration: none;
-    color: #331917 !important;
+    color: #331917;
 }
 
 main {
@@ -106,8 +112,7 @@ navbar-brand {
     margin:0;
     padding: 0;
     overflow: hidden;
-    top:0;
-    background-color: white;
+    top:0;;
 }
 
 li a {
@@ -117,7 +122,6 @@ li a {
     text-decoration: none;
     padding: 16px 18px;
     margin: 0 0.5rem;
-    background-color: white;
     transition: color 350ms;
 }
 
@@ -230,10 +234,8 @@ header {
 }
 
 .tag {
-    background-color: white;
     border: 1px solid #FF7777;
     padding: 2px 8px;
-    color: #331917;
     margin: 4px;
     border-radius: 5px;
     font-size: 14px;
