--- a/css/styles.css
+++ b/css/styles.css
@@ -356,7 +356,7 @@ html {
     z-index: 99;
     border: none;
     outline: none;
-    background-color: #ff9494;
+    background-color: #C4457C;
     color: white;
     cursor: pointer;
     width: 50px;
