--- a/css/project.css
+++ b/css/project.css
@@ -69,6 +69,16 @@
     background-image: url('../images/atb/lucy.png');
 }
 
+/* Video */
+
+.video-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0;
+}
+
 @media (max-width: 968px) { /* adjust for smaller screens */
     .personas {
         grid-template-columns: 1fr; /* 3 columns on medium screens */
@@ -95,5 +105,9 @@
     .ktp-style {
         height: 70vw;
         width: 80vw;
+    }
+    video {
+        width:80vw;
+        height: auto;
     }
 }
