--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,6 @@ body {
     color: #331917;
 }
 
-.dark-mode {
-    background-color: #121212 !important;
-    color: white !important;
-}
-
 h1 {
     font-family: 'Roboto Mono', monospace;
 }
@@ -136,6 +131,7 @@ navbar-brand {
 #logo #name {
     font-family: 'Righteous', cursive;
     font-size: 30px;
+    color: inherit;
 }
 
 .custom-nav {
@@ -154,7 +150,7 @@ navbar-brand {
 li a {
     display: block;
     text-align: center;
-    color:rgb(78, 78, 78);
+    color:inherit;
     text-decoration: none;
     padding: 16px 18px;
     margin: 0 0.5rem;
@@ -273,7 +269,7 @@ header {
 }
 
 .tag {
-    border: 1px solid #940242;
+    border: 1px solid #C4457C;
     padding: 2px 8px;
     margin: 4px;
     border-radius: 5px;
@@ -420,6 +416,11 @@ html {
     font-family: 'Oxygen', sans-serif;
     font-weight: 300;
     line-height: 1.6;
+}
+
+.dark-mode {
+    background-color: #1a0d13 !important;
+    color: #e7e7e7 !important;
 }
 
 @media screen and (max-width: 756px) {
