--- a/css/other-styles.css
+++ b/css/other-styles.css
@@ -57,13 +57,18 @@ iframe {
 
 .experience {
     display:flex;
-    flex-flow: row wrap;
+    flex-direction: column;
     align-items: baseline;
     justify-content: space-between;
     margin-bottom: 1rem;;
 }
 
 .position {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    align-items: baseline;
+    justify-content: space-between;
     margin-right: 1rem;
 }
 
@@ -156,6 +161,14 @@ iframe {
     margin: 0;
     color: white;
     font-size: 22px;
+}
+
+.bullets {
+    list-style-type: circle !important;
+}
+
+.bullets li {
+    margin-left: 1rem;
 }
 
 @media (max-width: 968px) { /* adjust for smaller screens */
